--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
